fixed more bugs again

--- a/client_credentials/index.html
+++ b/client_credentials/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+<head>
   <script type="text/javascript" src="app.js"></script>
-  <head>
-    <title>RNN-Music</title>
-  </head>
-
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+  <script type="text/javascript" src="playTrack.js" defer></script>
+  <title>Spotify Web Playback SDK Quick Start Tutorial</title>
+</head>
   <body>
-    <div class="container">
-      <div id="search">
-        <h1>RNN-Music</h1>
-        <button type="button" onclick="test()">test</button>
-        <p id="test_text">button not pushed</p>
-      </div>
+    <h1>Spotify Web Playback SDK Quick Start Tutorial</h1>
+    <h2>Open your console log: <code>View > Developer > JavaScript Console</code></h2>
+    <img id="current-track"/>
+    <h3 id="current-track-name"></h3>
   </body>
 </html>
-
